force-app/main/default/objects/Activity/fields/Callback_Comments__c.field-meta.xml
<CustomField>
    <fullName>Callback_Comments__c</fullName>
    <description>Only for Callback comments. Used to populate the Callback comments field on Lead</description>
    <inlineHelpText>Write your Comments here when you have scheduled a Callback</inlineHelpText>
    <label>Callback Comments</label>
    <length>150</length>
    <type>Text</type>
</CustomField>