force-app/main/default/objects/Activity/fields/Caller_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Caller_Firstname__c</fullName>
    <label>Caller Firstname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>