force-app/main/default/objects/Activity/fields/Caller_Lastname__c.field-meta.xml
<CustomField>
    <fullName>Caller_Lastname__c</fullName>
    <label>Caller Lastname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>