force-app/main/default/objects/Activity/fields/Lead_Activities__c.field-meta.xml
<CustomField>
    <fullName>Lead_Activities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Creates a relationship to Lead used for Task- Lead and Account Activities flow</description>
    <label>Lead Activities</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Account Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>