force-app/main/default/objects/Activity/fields/Next_7_days__c.field-meta.xml
<CustomField>
    <fullName>Next_7_days__c</fullName>
    <description>Checks if the activity is within the next 7 days - used for reporting</description>
    <formula>IF( ActivityDate &gt; TODAY() &amp;&amp; ActivityDate &lt;= TODAY() +7, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next 7 days</label>
    <type>Checkbox</type>
</CustomField>