force-app/main/default/objects/Activity/fields/okt_calendar__Color_Event__c.field-meta.xml
<CustomField>
    <fullName>okt_calendar__Color_Event__c</fullName>
    <label>Color_Event</label>
    <length>50</length>
    <type>Text</type>
</CustomField>