force-app/main/default/objects/Activity/fields/okt_calendar__Notification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>okt_calendar__Notification_Date_Time__c</fullName>
    <label>Notification Date Time</label>
    <type>DateTime</type>
</CustomField>