force-app/main/default/objects/Activity/fields/okt_calendar__Notification_Timer__c.field-meta.xml
<CustomField>
    <fullName>okt_calendar__Notification_Timer__c</fullName>
    <label>Notification Timer</label>
    <length>5</length>
    <type>Text</type>
</CustomField>