force-app/main/default/objects/Activity/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <formula>IMAGE( 
CASE(Priority , 
&quot;Normal&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;High&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Flag</label>
    <type>Text</type>
</CustomField>