force-app/main/default/objects/Activity/fields/Sales_Play__c.field-meta.xml
<CustomField>
    <fullName>Sales_Play__c</fullName>
    <description>Used to populate the Activity list on Leads and Account</description>
    <formula>Lead_Activities__r.Sales_Play_Campaign_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Play</label>
    <type>Text</type>
</CustomField>