force-app/main/default/objects/Activity/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Product change</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Set-up</fullName>
            </value>
            <value>
                <fullName>Business Internet Data Collection</fullName>
            </value>
            <value>
                <fullName>Home Office Data Collection</fullName>
            </value>
            <value>
                <fullName>Business Internet Implementation Period</fullName>
            </value>
            <value>
                <fullName>Home Office Implementation Period</fullName>
            </value>
            <value>
                <fullName>Home Office Project Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>