force-app/main/default/objects/Activity/fields/Task_link__c.field-meta.xml
<CustomField>
    <fullName>Task_link__c</fullName>
    <description>Used in the Task - Lead and Account Activities flow</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View Task&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task link</label>
    <type>Text</type>
</CustomField>